2020-07-16  Jonathan Bedard  <jbedard@apple.com>

        [Big Sur] De-duplicate SPI
        https://bugs.webkit.org/show_bug.cgi?id=214415
        <rdar://problem/65678060>

        Reviewed by Darin Adler.

        * wtf/PlatformHave.h:

2020-07-16  Jonathan Bedard  <jbedard@apple.com>

        [Big Sur] Build on Seed 1
        https://bugs.webkit.org/show_bug.cgi?id=214396
        <rdar://problem/65644762>

        Reviewed by Tim Horton.

        * wtf/PlatformHave.h: Add HAVE(LARGE_CONTROL_SIZE).

2020-07-15  Saagar Jha  <saagar@saagarjha.com>

        Add some missing boilerplate to help fix build on macOS Big Sur
        https://bugs.webkit.org/show_bug.cgi?id=214338

        Reviewed by Darin Adler.

        * wtf/PlatformHave.h: Add HAVE_LARGE_CONTROL_SIZE and enable it on Big Sur.

2020-07-15  Darin Adler  <darin@apple.com>

        Remove a few more uses of the terms black/white list
        https://bugs.webkit.org/show_bug.cgi?id=214371

        Reviewed by Alex Christensen.

        * wtf/URLHelpers.cpp:
        (WTF::URLHelpers::loadIDNAllowedScriptList): Renamed.
        (WTF::URLHelpers::isLookalikeCharacter): Renamed.
        (WTF::URLHelpers::addScriptToIDNAllowedScriptList): Renamed.
        (WTF::URLHelpers::initializeDefaultIDNAllowedScriptList): Renamed.
        (WTF::URLHelpers::allCharactersInAllowedIDNScriptList): Renamed.
        (WTF::URLHelpers::mapHostName): Updated for name changes.
        * wtf/URLHelpers.h: Renamed things.

        * wtf/cocoa/NSURLExtras.mm:
        (WTF::readIDNAllowedScriptListFile): Renamed.
        (WTF::URLHelpers::loadIDNAllowedScriptList): Renamed. Also use a modern for
        loop to simplify the code.

2020-07-15  Jim Mason  <jmason@ibinx.com>

        [WTF] Fix PackedAlignedPtr for X86_64 canonical addresses
        https://bugs.webkit.org/show_bug.cgi?id=214142

        Reviewed by Mark Lam

        * wtf/Packed.h:
        (WTF::PackedAlignedPtr::get const):
        (WTF::PackedAlignedPtr::set):
