@@ -4,6 +4,18 @@
         https://bugs.webkit.org/show_bug.cgi?id=213497
         <rdar://problem/58610662>
 
+        Unreviewed build fix.
+
+        * platform/graphics/avfoundation/objc/AVRoutePickerViewTargetPicker.mm:
+        * platform/graphics/avfoundation/objc/MediaPlaybackTargetPickerMac.mm:
+        (WebCore::MediaPlaybackTargetPickerMac::routePicker): Use HAVE_AVROUTEPICKERVIEW.
+
+2020-07-16  Eric Carlson  <eric.carlson@apple.com>
+
+        Use AVRoutePickerView when available for choosing AirPlay devices
+        https://bugs.webkit.org/show_bug.cgi?id=213497
+        <rdar://problem/58610662>
+
         Reviewed by Jer Noble.
 
         Use an AVRoutePickerView, the replacement for AVOutputDeviceMenuController, when
